--- a/templates/show_main.html
+++ b/templates/show_main.html
@@ -18,9 +18,9 @@
 			<td>{{ game.gid }}</td>
 			<td>{{ game.day }} {{ game.start_time }}</td>
 			<td>{{ game.black }}</td>
-			<td>--</td>
+			<td>{{game.score_b}}</td>
 			<td>{{ game.white }}</td>
-			<td>--</td>
+			<td>{{game.score_w}}</td>
 		</tr>
 		{% set rank = rank + 1 %}
 	{% endfor %}
