Converted standings system to using object for stats. Standings is now a dictionary of objects keyed off the team id

--- a/templates/show_main.html
+++ b/templates/show_main.html
@@ -35,8 +35,7 @@
 	<tr class=header><td>Rank</td><td>Team</td><td>Points</td><td>Record</td><td>GA</td><td>GP</td></tr>
 
 	{% set rank = 1 %}
-	{% for id in standings %}
-		{% set team = standings[id] %}
+	{% for team in standings %}
 		{% if rank % 2 == 0 %}
 			{% set class="even" %}
 		{% else %}
