Basic functionality for divisions done.
Extended database schema to support information for pool, division, and game type.
This allows for better tracking of when the round robin play is finished and what games
should be included in the standings.

New URL handler added /div/<division> to get information for specific division only.

API extended to accped CALL/<division> to filter on division as well

--- a/templates/show_main.html
+++ b/templates/show_main.html
@@ -4,7 +4,7 @@
 <div id="schedule">
 <h1>Schedule</h1>
 <table>
-	<tr class=header><td>Game</td><td>Start Time</td><td>Black</td><td></td><td>White</td><td></td></tr>
+	<tr class=header><td>Game</td><td>Start Time</td><td>Pool</td><td>Black</td><td></td><td>White</td><td></td></tr>
 
 	{% set rank = 1 %}
 	{% for game in games %}
@@ -17,6 +17,7 @@
 		<tr class={{ class }} >
 			<td>{{ game.gid }}</td>
 			<td>{{ game.day }} {{ game.start_time }}</td>
+			<td>{{ game.pool }}</td>
 			<td>{{ game.black }}</td>
 			<td>{{game.score_b}}</td>
 			<td>{{ game.white }}</td>
