--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,49 @@
+#jsddm {
+        margin: 0;
+        padding: 0;
+}
+
+#jsddm li {
+	float: left;
+	list-style: none;
+	font: 12px Tahoma, Arial;
+}
+
+#jsddm li a {
+	display: block;
+	background: #324143;
+	padding: 5px 12px;
+	text-decoration: none;
+	border-right: 1px solid white;
+	width: 70px;
+	color: #EAFFED;
+	white-space: nowrap;
+}
+
+#jsddm li a:hover { background: #24313C }
+
+#jsddm li ul {
+	margin: 0;
+	padding: 0;
+	position: absolute;
+	visibility: hidden;
+	border-top: 1px solid white;
+	z-index: 999;
+}
+
+#jsddm li ul li {
+	float: none;
+	display: inline;
+}
+
+#jsddm li ul li a {
+	width: auto;
+	background: #A9C251;
+	color: #24313C;
+}
+
+#jsddm li ul li a:hover { background: #8EA344 }
+
 table 
 {
 	border-collapse:collapse;
@@ -38,6 +84,11 @@ td.soft
 	font-style:italic;
 }
 
+td.strong
+{
+	font-weight:bold;
+}
+
 input.score
 {
 	margin-left: 1em;
@@ -59,11 +110,16 @@ body {
 
 }
 
+#nav {
+	height: 40px;
+}
+
 #wrap {
 	width: 90%;
 	margin: 5px;
 }
 
+/*
 #schedule 
 {
 	float:left;
@@ -76,3 +132,4 @@ body {
 	float: right;
 	width: 40%;
 }
+*/
