--- a/templates/nav_bar.html
+++ b/templates/nav_bar.html
@@ -2,20 +2,19 @@
 {% block nav %}
         <div id="nav">
         <ul id="jsddm">
-		<li><a href="/">Main</a>
-                <li>
-                <a href="#">By Division</a>
+		<li><a href="/">Main</a></li>
+                <li class=no_link>Division
                         <ul>
                                 <li><a href="/div/a">A Division</a></li>
                                 <li><a href="/div/b">B Division</a></li>
                         </ul>
                 </li>
-                <li><a href="#">Teams</a>
-		<ul>
-		{% for team in standings|sort(attribute='name') %}
-			<li><a href="/team/{{ team.team_id  }}">{{ team.name }}</a></li>
-		{% endfor %}
-        	</ul>
+                <li class=no_link>Teams
+			<ul>
+			{% for team in standings|sort(attribute='name') %}
+				<li><a href="/team/{{ team.team_id  }}">{{ team.name }}</a></li>
+			{% endfor %}
+			</ul>
 		</li>
 	</ul>
         </div>
