--- a/templates/layout.html
+++ b/templates/layout.html
@@ -16,17 +16,23 @@
 	</script>
 
 	<script type="text/javascript">
-		var timeout         = 500;
-		var closetimer		= 0;
-		var ddmenuitem      = 0;
+		var timeout = 500;
+		var closetimer = 0;
+		var ddmenuitem = 0;
 
-		function jsddm_open()
-		{	jsddm_canceltimer();
+		function jsddm_open() {
+			jsddm_canceltimer();
 			jsddm_close();
-			ddmenuitem = $(this).find('ul').eq(0).css('visibility', 'visible');}
+			ddmenuitem = $(this).find('ul').eq(0).css('visibility', 'visible');
+			$('#jsddm > li').unbind('click');
+			return false;
+		}
 
-		function jsddm_close()
-		{	if(ddmenuitem) ddmenuitem.css('visibility', 'hidden');}
+
+		function jsddm_close() {
+			if(ddmenuitem) ddmenuitem.css('visibility', 'hidden');
+			$('#jsddm > li').bind('click', jsddm_open);
+		}
 
 		function jsddm_timer()
 		{	closetimer = window.setTimeout(jsddm_close, timeout);}
@@ -37,8 +43,10 @@
 				closetimer = null;}}
 
 		$(document).ready(function()
-		{	$('#jsddm > li').bind('mouseover', jsddm_open);
-			$('#jsddm > li').bind('mouseout',  jsddm_timer);});
+		{	
+			$('#jsddm > li').bind('click mouseover', jsddm_open);
+			$('#jsddm > li').bind('mouseout',  jsddm_timer);
+		});
 
 		document.onclick = jsddm_close;
 	</script>
