Fixed display title for show_individual.html used for division and team schedules

--- a/templates/show_individual.html
+++ b/templates/show_individual.html
@@ -14,7 +14,7 @@
 
 {% block games %}
 <div id="schedule">
-<h1>Schedule for {{ division }} Division</h1>
+<h1>Schedule for {{ titleText }}</h1>
 <table>
 	<tr class=header><td>Game</td><td>Start Time</td><td>Pool</td><td>Black</td><td></td><td>White</td><td></td></tr>
 
