--- a/templates/nav_bar.html
+++ b/templates/nav_bar.html
@@ -3,13 +3,13 @@
         <div id="nav">
         <ul id="jsddm">
 		<li><a href="/">Main</a></li>
-                <li class=no_link>Division
+                <li><a href="#">Division</a>
                         <ul>
                                 <li><a href="/div/a">A Division</a></li>
                                 <li><a href="/div/b">B Division</a></li>
                         </ul>
                 </li>
-                <li class=no_link>Teams
+                <li><a href="#">Teams</a>
 			<ul>
 			{% for team in standings|sort(attribute='name') %}
 				<li><a href="/team/{{ team.team_id  }}">{{ team.name }}</a></li>
