Pod logic brute forced in.
Added new table for pods, only way to figure out which team is in a pod before games
are played. Seeded pods will have to be filled in manually at some point. Also changed the way
getStandings works to work via a pod (at least partially changed).

--- a/templates/show_main.html
+++ b/templates/show_main.html
@@ -47,7 +47,7 @@
 
 	{% set rank = 1 %}
 	{% for team in standings %}
-		{% if lastDiv != team.division %}
+		{% if lastPod != team.pod%}
 			{% set rank = 1 %}
 		{% endif %}
 		{% if rank % 2 == 0 %}
@@ -57,7 +57,7 @@
 		{% endif %}
 	
 		<tr class={{ class }} >
-			<td>{{ team.division}}{{ rank }}</td>
+			<td>{{ team.pod}}{{ rank }}</td>
 			<td>{{ team.name }}</td>
 			<td>{{ team.points }} </td>
 			<td>{{ team.wins }}-{{ team.losses }}-{{ team.ties }}</td>
@@ -65,7 +65,7 @@
 			<td>{{ team.games_played }} </td>
 		</tr>
 		{% set rank = rank + 1 %}
-		{% set lastDiv = team.division %}
+		{% set lastPod = team.pod %}
 	{% endfor %}
 </table>
 </div>
