--- a/templates/update_single.html
+++ b/templates/update_single.html
@@ -7,6 +7,7 @@
                 <input type=hidden name=gid value={{ game.gid }}>
                 <input type=hidden name=btid value={{ game.black_tid }}>
                 <input type=hidden name=wtid value={{ game.white_tid }}>
+		<input type=hidden name=pod  value={{ game.pod }}>
                 <table id=games>
                 <tr class=header><td>Game</td><td>Start Time</td><td>Black</td><td>White</td></tr>
         
