--- a/templates/show_main.html
+++ b/templates/show_main.html
@@ -14,7 +14,7 @@
 <div id="schedule">
 <h1>Schedule</h1>
 <table>
-	<tr class=header><td>Game</td><td>Start Time</td><td>Pool</td><td>Black</td><td></td><td>White</td><td></td></tr>
+	<tr class=header><td>Game</td><td>Start Time</td><td>Pool</td><td>Pod</td><td>Black</td><td></td><td>White</td><td></td></tr>
 
 	{% set rank = 1 %}
 	{% for game in games %}
@@ -28,6 +28,7 @@
 			<td>{{ game.gid }}</td>
 			<td>{{ game.day }} {{ game.start_time }}</td>
 			<td>{{ game.pool }}</td>
+			<td>{{ game.pod }}</td>
 			<td class={{game.style_b}}>{{ game.black }}</td>
 			<td>{{game.score_b}}</td>
 			<td class={{game.style_w}}>{{ game.white }}</td>
