--- a/templates/show_main.html
+++ b/templates/show_main.html
@@ -12,7 +12,7 @@
 {% endblock tabs %}
 {% block games %}
 <div id="schedule">
-<h1>Schedule</h1>
+<h1>{{ titleText }}</h1>
 <table>
 	<tr class=header><td>Game</td><td>Start Time</td><td>Pool</td><td>Pod</td><td>Black</td><td></td><td>White</td><td></td></tr>
 
