Fixes in game parsing logic and added pod colors
Attempted to impliment pods standings order but realized it was a broken approach.

--- a/templates/show_main.html
+++ b/templates/show_main.html
@@ -28,7 +28,7 @@
 			<td>{{ game.gid }}</td>
 			<td>{{ game.day }} {{ game.start_time }}</td>
 			<td>{{ game.pool }}</td>
-			<td>{{ game.pod }}</td>
+			<td style="background-color:{{ game.pod_color }}">{{ game.pod }}</td>
 			<td class={{game.style_b}}>{{ game.black }}</td>
 			<td>{{game.score_b}}</td>
 			<td class={{game.style_w}}>{{ game.white }}</td>
