Final placings now show in main page. Uses W/L records loaded in.
Needs to be expanded for division view/pod view in some meaningful way

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -59,6 +59,7 @@
 		{% block tabs %}{% endblock %}
 		{% block games %}{% endblock %}
 		{% block standings %}{% endblock %}
+		{% block places %}{% endblock %}
 	</div>
 </body>
 
