--- a/templates/show_main.html
+++ b/templates/show_main.html
@@ -8,7 +8,7 @@
                 <ul>
                         <li><a href="#schedule">Schedule</a></li>
                         <li><a href="#standings">Standings</a></li>
-                        <li><a href="#places">Places</a></li>
+                        {% if placings %}<li><a href="#places">Places</a></li>{% endif %}
                 </ul>
 {% endblock tabs %}
 {% block games %}
@@ -40,6 +40,7 @@
 		{% set rank = rank + 1 %}
 	{% endfor %}
 </table>
+<p class=note>{{ noteText }}</p>
 </div>
 {% endblock games %}
 
@@ -77,6 +78,7 @@
 {% endblock standings %}
 
 {% block places %}
+{% if placings %}
 <div id="places">
 <h1>{{ titleText }} Placings</h1>
 <table>
@@ -96,4 +98,5 @@
 	{% endfor %}
 </table>
 </div>
+{% endif %}
 {% endblock places %}
