--- a/static/style.css
+++ b/static/style.css
@@ -142,15 +142,18 @@ body {
 #schedule_tv 
 {
 	float:left;
-	width: 60%;
+	width: 55%;
 	margin-bottom: 20px;
-	font-size: .9em;
+	font-size: .8em;
+	margin-left: 20px;
+	padding-top:10px;
 }
 
 #standings_tv
 {
 	float: right;
 	width: 40%;
-	font-size: .9em;
+	font-size: .8em;
+	padding-top:10px;
 }
 
