Added flash messaging for real ties

--- a/templates/show_main.html
+++ b/templates/show_main.html
@@ -74,6 +74,17 @@
 		{% set lastPod = team.pod %}
 	{% endfor %}
 </table>
+
+{% with messages = get_flashed_messages() %}
+  {% if messages %}
+    <ul class=flashes>
+    {% for message in messages %}
+      <li>{{ message }}</li>
+    {% endfor %}
+    </ul>
+  {% endif %}
+{% endwith %}
+
 </div>
 {% endblock standings %}
 
