--- a/templates/show_main.html
+++ b/templates/show_main.html
@@ -112,12 +112,12 @@
 <div id="places">
 <h1>{{ titleText }} Placings</h1>
 <table id=places_tbl class="display" cellspacing="0" width="100%" >
-	<theader>
+	<thead>
 		<tr>
 			<td>Place</td>
 			<td>Team</td>
 		</tr>
-	</theader>
+	</thead>
 	<tbody>
 	{% set row = 1 %}
 	{% for team in placings %}
