--- a/static/style.css
+++ b/static/style.css
@@ -1,47 +1,4 @@
-#jsddm {
-        margin: 0;
-        padding: 0;
-}
 
-#jsddm li {
-	float: left;
-	list-style: none;
-	font: 12px Tahoma, Arial;
-}
-
-#jsddm li a, li.no_link, li.dummy {
-	display: block;
-	background-color: #4671D5;
-	padding: 5px 12px;
-	text-decoration: none;
-	border-right: 1px solid white;
-	width: 70px;
-	color: #EAFFED;
-	white-space: nowrap;
-}
-
-#jsddm li a:hover { background: #1240AB }
-
-#jsddm li ul {
-	margin: 0;
-	padding: 0;
-	position: absolute;
-	visibility: hidden;
-	border-top: 1px solid white;
-	z-index: 999;
-}
-
-#jsddm li ul li {
-	float: none;
-	display: inline;
-}
-
-#jsddm li ul li a {
-	width: auto;
-	background: #4671D5;
-}
-
-#jsddm li ul li a:hover { background: #1240AB }
 
 /*
 table 
@@ -133,6 +90,7 @@ body {
 #tabs {
 	width: 90%;
 	margin: 5px;
+	margin-top: 50px;
 }
 
 #update {
