--- a/templates/nav_bar.html
+++ b/templates/nav_bar.html
@@ -1,33 +1,54 @@
-
 {% block nav %}
-        <div id="nav">
-        <ul id="jsddm">
-		<li><a href="/">Main</a></li>
-                <li><a href="#">Division</a>
-                        <ul>
-                                <li><a href="/div/A">A Division</a></li>
-                                <li><a href="/div/B">B Division</a></li>
-                        </ul>
-                </li>
-		<li><a href="#">Pods</a>
-			<ul>
-			{% for pod in pods %}
-				<li><a href="/pod/{{ pod.pod }}">Pod {{ pod.pod }}</a></li>
-			{% endfor %}
-			</ul>
-		</li>
-                <li><a href="#">Teams</a>
-			<ul>
-			{% set last="" %}
-			{% for team in standings|sort(attribute='name') %}
-				{% if team.name != last %}
-					<li><a href="/team/{{ team.team_id  }}">{{ team.name }}</a></li>
-				{% endif %}
-				{% set last = team.name %}
-			{% endfor %}
-			</ul>
-		</li>
-	</ul>
+    <!-- Navigation -->
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="/">Underwater Hockey Tournament Scores</a>
+            </div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="#navbar-collapse">
+				<ul class="nav navbar-nav navbar-right">
+					<li>
+						<a href="/">Main</a>
+					</li>
+					<li class="dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Division<b class="caret"></b></a>
+						<ul class="dropdown-menu">
+							<li><a href="/div/A">A Division</a></li>
+							<li><a href="/div/B">B Division</a></li>
+						</ul>
+					</li>
+					<li class="dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Pods<b class="caret"></b></a>
+						<ul class="dropdown-menu">
+						{% for pod in pods %}
+							<li><a href="/pod/{{ pod.pod }}">Pod {{ pod.pod }}</a></li>
+						{% endfor %}
+						</ul>
+					</li>
+					<li class="dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Teams<b class="caret"></b></a>
+						<ul class="dropdown-menu">
+						{% set last="" %}
+						{% for team in standings|sort(attribute='name') %}
+							{% if team.name != last %}
+								<li><a href="/team/{{ team.team_id  }}">{{ team.name }}</a></li>
+							{% endif %}
+							{% set last = team.name %}
+						{% endfor %}
+						</ul>
+					</li>
+				</ul>
+	       </div>
+            <!-- /.navbar-collapse -->
         </div>
-
+        <!-- /.container -->
+    </nav>
 {% endblock nav %}
