Switched tab navigation over to bootstrap from jquery-ui

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -46,7 +46,7 @@
 </head>
 <body>
 	{% block nav %}{% endblock %}
-	<div id=tabs>
+	<div id=tabs class=row>
 		{% block tabs %}{% endblock %}
 		{% block games %}{% endblock %}
 		{% block standings %}{% endblock %}
